Updated graphql from beta 2.0 to 2.0 final

--- a/schema_comparatorTests/schema_comparatorTests.csproj
+++ b/schema_comparatorTests/schema_comparatorTests.csproj
@@ -39,8 +39,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GraphQL, Version=2.0.0.887, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\GraphQL.2.0.0-alpha-887\lib\net45\GraphQL.dll</HintPath>
+    <Reference Include="GraphQL, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\GraphQL.2.0.0\lib\net45\GraphQL.dll</HintPath>
     </Reference>
     <Reference Include="GraphQL-Parser, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\GraphQL-Parser.3.0.0\lib\net45\GraphQL-Parser.dll</HintPath>
