changed to using NUnit instead of MSTest

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ solution: dotnetgraphql-schema_comparator.sln
 install:
   - sudo apt-get install -y gtk-sharp2
   - nuget restore dotnetgraphql-schema_comparator.sln
-Script:
+script:
   - xbuild /p:Configuration=Release dotnetgraphql-schema_comparator.sln
-  - mono ./packages/xunit.runners.*/tools/xunit.console.clr4.exe ./schema_comparatorTests/bin/Release/schema_comparatorTests.dll
+  - mono ./testrunner/NUnit.Runners.*/tools/nunit-console.exe ./schema_comparatorTests/bin/Release/schema_comparatorTests.dll
