--- a/schema_comparatorTests/packages.config
+++ b/schema_comparatorTests/packages.config
@@ -2,9 +2,9 @@
 <packages>
   <package id="GraphQL" version="2.0.0" targetFramework="net461" />
   <package id="GraphQL-Parser" version="3.0.0" targetFramework="net461" />
-  <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
-  <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="NUnit" version="3.11.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net461" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net461" />
   <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net461" />
