--- a/.bumpedrc
+++ b/.bumpedrc
@@ -1,5 +1,6 @@
 files:
   - vsts_task/vss-extension.json
+  - package.json
 plugins:
   prerelease:
     Linting config files:
@@ -10,12 +11,6 @@ plugins:
     Committing new version:
       plugin: bumped-terminal
       command: 'git add CHANGELOG.md package.json && git commit -m "Release $newVersion"'
-    Detecting problems before publish:
-      plugin: bumped-terminal
-      command: 'git-dirty && npm test'
     Publishing tag to GitHub:
       plugin: bumped-terminal
       command: 'git tag $newVersion && git push && git push --tags'
-    Publishing to NPM:
-      plugin: bumped-terminal
-      command: npm publish
