--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ install:
   - sudo apt-get install -y gtk-sharp2
   - nuget restore dotnetgraphql-schema_comparator.sln
   - npm install -g tfx-cli
+  - npm install -g bumped
+  - npm install -g bumped-finepack
+  - npm install -g bumped-changelog
+  - npm install -g bumped-terminal
 script:
   - msbuild /p:Configuration=Release dotnetgraphql-schema_comparator.sln
   - mono ./packages/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe ./schema_comparatorTests/bin/Release/schema_comparatorTests.dll
-  - ./vsts-task-build.sh
+  #- ./vsts-task-build.sh
